# AI-REAL-ESTATE-AGENT

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  config.py  main.py  notes.txt
backend/artifacts/: ames_input_metrics.json  price_summary_stats.json
backend/prompts/: registry.json  stage1_extract_v1.txt  stage1_extract_v2.txt  stage2_interpret_v1.txt
backend/schemas/: ml_model.py  stage_1.py  stage_2.py
backend/services/: feature_extraction.py  llm_client.py  prediction_interpretation.py  price_prediction.py  redis_client.py
frontend/: Dockerfile  app.py
