[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "ollama>=0.6.1",
    "pydantic>=2.13.0",
    "python-dotenv>=1.0.1",
    "redis>=5.0.0",
    "orjson>=3.10.0",
    "pandas>=2.2.0",
    "uvicorn>=0.30.0",
    "scikit-learn==1.6.1",
    "joblib>=1.3.0",
]
